--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,5 +79,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    -webkit-tap-highlight-color: transparent;
+    background-image: url("/background/bg.png");
   }
 }
