Added Color Picker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,4 +85,7 @@
     -webkit-tap-highlight-color: transparent;
     background-image: url("/background/bg.png");
   }
+  .colorP .react-colorful {
+    height: 180px;
+  }
 }
